Bug 84277 - [8 Regression] A lot of new acats testsuite failures
Summary: [8 Regression] A lot of new acats testsuite failures
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: target (show other bugs)
Version: 8.0.1
: P4 normal
Target Milestone: 8.0
Assignee: Eric Botcazou
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-02-08 08:37 UTC by Rainer Emrich
Modified: 2018-03-08 17:35 UTC (History)
3 users (show)

See Also:
Host: x86_64-w64-mingw32
Target: x86_64-w64-mingw32
Build: x86_64-w64-mingw32
Known to work: 7.3.1
Known to fail: 8.0.1
Last reconfirmed: 2018-02-08 00:00:00


Attachments
acats testsuite log for 8.0.0 with -fno-reorder-blocks-and-partition (137.24 KB, application/x-xz)
2018-02-08 16:06 UTC, Rainer Emrich
Details
acats testsuite log for 7.3.1 (137.58 KB, application/x-xz)
2018-02-08 16:07 UTC, Rainer Emrich
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Emrich 2018-02-08 08:37:33 UTC
I get a lot of new acats testsuite failures compared to 7.3.0, see https://gcc.gnu.org/ml/gcc-testresults/2018-02/msg00439.html and https://gcc.gnu.org/ml/gcc-testresults/2018-02/msg00308.html for comparison.

At least twenty of the tests allocate increasing memory amounts until the host memory is exhausted.

Passing -fno-reorder-blocks-and-partition to the acats testsuite run reduces the unexpected failures to 22.

		=== acats Summary ===
# of expected passes		2298
# of unexpected failures	22
*** FAILURES: c23003b c23003g c23003i c250002 c380004 cd2b11a cd2b15c ce2102l ce2102m ce2103a ce2103b ce3102d ce3107a ce3115a cxa4005 cxa4008 cxa4016 cxa4019 cxac003 cxb3012 cxf3a01 cxf3a02 
/opt/devel/gnu/src/gcc-mingw-w64/gcc-8.0.0/gcc/testsuite/ada/acats/run_all.sh completed at Wed Feb  7 12:28:36 CET 2018 

On gcc 7.3.1 I get only five unexpected failures:

		=== acats Summary ===
# of expected passes		2315
# of unexpected failures	5
*** FAILURES: c23003b c23003g c23003i c250002 c380004
Comment 1 Eric Botcazou 2018-02-08 15:56:54 UTC
The only known failure is c380004 (see also PR ada/82393) so can you attach the log file of the runs for 7.3.0 and 8.0.0 + -fno-reorder-blocks-and-partition?
Comment 2 Rainer Emrich 2018-02-08 16:06:43 UTC
Created attachment 43374 [details]
acats testsuite log for 8.0.0 with -fno-reorder-blocks-and-partition

Testsuite log for 8.0.0 with -fno-reorder-blocks-and-partition.
Comment 3 Rainer Emrich 2018-02-08 16:07:55 UTC
Created attachment 43375 [details]
acats testsuite log for 7.3.1

Testsuite log for 7.3.1
Comment 4 simon 2018-02-08 16:48:06 UTC
For both, the c250002 failure looks like an instance of PR81114.

splitting D:/opt/devel/SCRATCH/tmp.I49PZRPGFv/gcc-8.0.0/gcc-8.0.0/gcc/testsuite/ada/acats/tests/c2/c250002.a into:
   c250002_0.ads
   c250002_á.ads
   c250002_á.adb
   c250002.adb
BUILD c250002.adb
[...]
D:/opt/devel/SCRATCH/tmp.I49PZRPGFv/gcc-8.0.0/gcc-8.0.0/gcc/xgcc -c 
-B/opt/devel/SCRATCH/tmp.I49PZRPGFv/gcc-8.0.0/gcc-8.0.0/gcc/ -gnatws 
-O2 -fno-reorder-blocks-and-partition -gnat95 
-ID:/opt/devel/SCRATCH/tmp.I49PZRPGFv/gcc-8.0.0/gcc8.0.0/gcc/testsuite/ada/acats/support c250002.adb
c250002.adb:6:06: file "c250002_á.ads" not found
gnatmake: "c250002.adb" compilation error

Interestingly, on macOS with APFS the relevant gnatchop fails with

gnatchop c250002.aw
splitting c250002.aw into:
   c250002_0.ads
cannot create c250002_?.ads
cannot create c250002_?.adb
   c250002.adb

I think that APFS is rejecting a file name with an invalid UTF8 character 
(0xc1).
Comment 5 Eric Botcazou 2018-02-08 21:03:22 UTC
Thanks, I'll investigate.
Comment 6 Eric Botcazou 2018-02-16 23:26:40 UTC
Author: ebotcazou
Date: Fri Feb 16 23:26:08 2018
New Revision: 257773

URL: https://gcc.gnu.org/viewcvs?rev=257773&root=gcc&view=rev
Log:
	PR ada/84277
	* gnat.dg/array11.adb (Array11): Tweak index and remove warning.
	* gnat.dg/dispatch1.adb: Rename into...
	* gnat.dg/disp1.adb: ...this.
	* gnat.dg/dispatch1_p.ads: Rename into...
	* gnat.dg/disp1_pkg.ads: ...this.
	* gnat.dg/disp2.adb: Rename into...
	* gnat.dg/dispatch2.adb: ...this.
	* gnat.dg/dispatch2_p.ads: Rename into...
	* gnat.dg/disp2_pkg.ads: ...this.
	* gnat.dg/dispatch2_p.adb: Rename into...
	* gnat.dg/disp2_pkg.adb: this.
	* gnat.dg/generic_dispatch.adb: Rename into...
	* gnat.dg/generic_disp.adb: this.
	* gnat.dg/generic_dispatch_p.ads: Rename into...
	* gnat.dg/generic_disp_pkg.ads: ...this.
	* gnat.dg/generic_dispatch_p.adb: Rename into...
	* gnat.dg/generic_disp_pkg.adb: ...this.
	* gnat.dg/null_pointer_deref1.adb (Null_Pointer_Deref1): Robustify.
	* gnat.dg/null_pointer_deref2.adb (Null_Pointer_Deref2): Likewise.
	* gnat.dg/object_overflow1.adb: Tweak index.
	* gnat.dg/object_overflow2.adb: Likewise.
	* gnat.dg/object_overflow3.adb: Likewise.
	* gnat.dg/object_overflow4.adb: Likewise.
	* gnat.dg/object_overflow5.adb: Likewise.

Added:
    trunk/gcc/testsuite/gnat.dg/disp1.adb
      - copied, changed from r257772, trunk/gcc/testsuite/gnat.dg/dispatch1.adb
    trunk/gcc/testsuite/gnat.dg/disp1_pkg.ads
      - copied, changed from r257772, trunk/gcc/testsuite/gnat.dg/dispatch1_p.ads
    trunk/gcc/testsuite/gnat.dg/disp2.adb
      - copied, changed from r257772, trunk/gcc/testsuite/gnat.dg/dispatch2.adb
    trunk/gcc/testsuite/gnat.dg/disp2_pkg.adb
      - copied, changed from r257772, trunk/gcc/testsuite/gnat.dg/dispatch2_p.adb
    trunk/gcc/testsuite/gnat.dg/disp2_pkg.ads
      - copied, changed from r257772, trunk/gcc/testsuite/gnat.dg/dispatch2_p.ads
    trunk/gcc/testsuite/gnat.dg/generic_disp.adb
      - copied, changed from r257772, trunk/gcc/testsuite/gnat.dg/generic_dispatch.adb
    trunk/gcc/testsuite/gnat.dg/generic_disp_pkg.adb
      - copied, changed from r257772, trunk/gcc/testsuite/gnat.dg/generic_dispatch_p.adb
    trunk/gcc/testsuite/gnat.dg/generic_disp_pkg.ads
      - copied, changed from r257772, trunk/gcc/testsuite/gnat.dg/generic_dispatch_p.ads
Removed:
    trunk/gcc/testsuite/gnat.dg/dispatch1.adb
    trunk/gcc/testsuite/gnat.dg/dispatch1_p.ads
    trunk/gcc/testsuite/gnat.dg/dispatch2.adb
    trunk/gcc/testsuite/gnat.dg/dispatch2_p.adb
    trunk/gcc/testsuite/gnat.dg/dispatch2_p.ads
    trunk/gcc/testsuite/gnat.dg/generic_dispatch.adb
    trunk/gcc/testsuite/gnat.dg/generic_dispatch_p.adb
    trunk/gcc/testsuite/gnat.dg/generic_dispatch_p.ads
Modified:
    trunk/gcc/testsuite/ChangeLog
    trunk/gcc/testsuite/gnat.dg/array11.adb
    trunk/gcc/testsuite/gnat.dg/null_pointer_deref1.adb
    trunk/gcc/testsuite/gnat.dg/null_pointer_deref2.adb
    trunk/gcc/testsuite/gnat.dg/object_overflow1.adb
    trunk/gcc/testsuite/gnat.dg/object_overflow2.adb
    trunk/gcc/testsuite/gnat.dg/object_overflow3.adb
    trunk/gcc/testsuite/gnat.dg/object_overflow4.adb
    trunk/gcc/testsuite/gnat.dg/object_overflow5.adb
Comment 7 Eric Botcazou 2018-02-16 23:27:21 UTC
Author: ebotcazou
Date: Fri Feb 16 23:26:49 2018
New Revision: 257774

URL: https://gcc.gnu.org/viewcvs?rev=257774&root=gcc&view=rev
Log:
	PR ada/84277
	* gnat.dg/array11.adb (Array11): Tweak index and remove warning.
	* gnat.dg/dispatch1.adb: Rename into...
	* gnat.dg/disp1.adb: ...this.
	* gnat.dg/dispatch1_p.ads: Rename into...
	* gnat.dg/disp1_pkg.ads: ...this.
	* gnat.dg/disp2.adb: Rename into...
	* gnat.dg/dispatch2.adb: ...this.
	* gnat.dg/dispatch2_p.ads: Rename into...
	* gnat.dg/disp2_pkg.ads: ...this.
	* gnat.dg/dispatch2_p.adb: Rename into...
	* gnat.dg/disp2_pkg.adb: this.
	* gnat.dg/generic_dispatch.adb: Rename into...
	* gnat.dg/generic_disp.adb: this.
	* gnat.dg/generic_dispatch_p.ads: Rename into...
	* gnat.dg/generic_disp_pkg.ads: ...this.
	* gnat.dg/generic_dispatch_p.adb: Rename into...
	* gnat.dg/generic_disp_pkg.adb: ...this.
	* gnat.dg/null_pointer_deref1.adb (Null_Pointer_Deref1): Robustify.
	* gnat.dg/null_pointer_deref2.adb (Null_Pointer_Deref2): Likewise.
	* gnat.dg/object_overflow1.adb: Tweak index.
	* gnat.dg/object_overflow2.adb: Likewise.
	* gnat.dg/object_overflow3.adb: Likewise.
	* gnat.dg/object_overflow4.adb: Likewise.
	* gnat.dg/object_overflow5.adb: Likewise.

Added:
    branches/gcc-7-branch/gcc/testsuite/gnat.dg/disp1.adb
      - copied, changed from r257773, branches/gcc-7-branch/gcc/testsuite/gnat.dg/dispatch1.adb
    branches/gcc-7-branch/gcc/testsuite/gnat.dg/disp1_pkg.ads
      - copied, changed from r257773, branches/gcc-7-branch/gcc/testsuite/gnat.dg/dispatch1_p.ads
    branches/gcc-7-branch/gcc/testsuite/gnat.dg/disp2.adb
      - copied, changed from r257773, branches/gcc-7-branch/gcc/testsuite/gnat.dg/dispatch2.adb
    branches/gcc-7-branch/gcc/testsuite/gnat.dg/disp2_pkg.adb
      - copied, changed from r257773, branches/gcc-7-branch/gcc/testsuite/gnat.dg/dispatch2_p.adb
    branches/gcc-7-branch/gcc/testsuite/gnat.dg/disp2_pkg.ads
      - copied, changed from r257773, branches/gcc-7-branch/gcc/testsuite/gnat.dg/dispatch2_p.ads
    branches/gcc-7-branch/gcc/testsuite/gnat.dg/generic_disp.adb
      - copied, changed from r257773, branches/gcc-7-branch/gcc/testsuite/gnat.dg/generic_dispatch.adb
    branches/gcc-7-branch/gcc/testsuite/gnat.dg/generic_disp_pkg.adb
      - copied, changed from r257773, branches/gcc-7-branch/gcc/testsuite/gnat.dg/generic_dispatch_p.adb
    branches/gcc-7-branch/gcc/testsuite/gnat.dg/generic_disp_pkg.ads
      - copied, changed from r257773, branches/gcc-7-branch/gcc/testsuite/gnat.dg/generic_dispatch_p.ads
Removed:
    branches/gcc-7-branch/gcc/testsuite/gnat.dg/dispatch1.adb
    branches/gcc-7-branch/gcc/testsuite/gnat.dg/dispatch1_p.ads
    branches/gcc-7-branch/gcc/testsuite/gnat.dg/dispatch2.adb
    branches/gcc-7-branch/gcc/testsuite/gnat.dg/dispatch2_p.adb
    branches/gcc-7-branch/gcc/testsuite/gnat.dg/dispatch2_p.ads
    branches/gcc-7-branch/gcc/testsuite/gnat.dg/generic_dispatch.adb
    branches/gcc-7-branch/gcc/testsuite/gnat.dg/generic_dispatch_p.adb
    branches/gcc-7-branch/gcc/testsuite/gnat.dg/generic_dispatch_p.ads
Modified:
    branches/gcc-7-branch/gcc/testsuite/ChangeLog
    branches/gcc-7-branch/gcc/testsuite/gnat.dg/array11.adb
    branches/gcc-7-branch/gcc/testsuite/gnat.dg/null_pointer_deref1.adb
    branches/gcc-7-branch/gcc/testsuite/gnat.dg/null_pointer_deref2.adb
    branches/gcc-7-branch/gcc/testsuite/gnat.dg/object_overflow1.adb
    branches/gcc-7-branch/gcc/testsuite/gnat.dg/object_overflow2.adb
    branches/gcc-7-branch/gcc/testsuite/gnat.dg/object_overflow3.adb
    branches/gcc-7-branch/gcc/testsuite/gnat.dg/object_overflow4.adb
    branches/gcc-7-branch/gcc/testsuite/gnat.dg/object_overflow5.adb
Comment 8 Eric Botcazou 2018-02-16 23:27:57 UTC
Author: ebotcazou
Date: Fri Feb 16 23:27:21 2018
New Revision: 257775

URL: https://gcc.gnu.org/viewcvs?rev=257775&root=gcc&view=rev
Log:
	PR ada/84277
	* gnat.dg/array11.adb (Array11): Tweak index and remove warning.
	* gnat.dg/dispatch1.adb: Rename into...
	* gnat.dg/disp1.adb: ...this.
	* gnat.dg/dispatch1_p.ads: Rename into...
	* gnat.dg/disp1_pkg.ads: ...this.
	* gnat.dg/disp2.adb: Rename into...
	* gnat.dg/dispatch2.adb: ...this.
	* gnat.dg/dispatch2_p.ads: Rename into...
	* gnat.dg/disp2_pkg.ads: ...this.
	* gnat.dg/dispatch2_p.adb: Rename into...
	* gnat.dg/disp2_pkg.adb: this.
	* gnat.dg/generic_dispatch.adb: Rename into...
	* gnat.dg/generic_disp.adb: this.
	* gnat.dg/generic_dispatch_p.ads: Rename into...
	* gnat.dg/generic_disp_pkg.ads: ...this.
	* gnat.dg/generic_dispatch_p.adb: Rename into...
	* gnat.dg/generic_disp_pkg.adb: ...this.
	* gnat.dg/null_pointer_deref1.adb (Null_Pointer_Deref1): Robustify.
	* gnat.dg/null_pointer_deref2.adb (Null_Pointer_Deref2): Likewise.
	* gnat.dg/object_overflow1.adb: Tweak index.
	* gnat.dg/object_overflow2.adb: Likewise.
	* gnat.dg/object_overflow3.adb: Likewise.
	* gnat.dg/object_overflow4.adb: Likewise.
	* gnat.dg/object_overflow5.adb: Likewise.

Added:
    branches/gcc-6-branch/gcc/testsuite/gnat.dg/disp1.adb
      - copied, changed from r257774, branches/gcc-6-branch/gcc/testsuite/gnat.dg/dispatch1.adb
    branches/gcc-6-branch/gcc/testsuite/gnat.dg/disp1_pkg.ads
      - copied, changed from r257774, branches/gcc-6-branch/gcc/testsuite/gnat.dg/dispatch1_p.ads
    branches/gcc-6-branch/gcc/testsuite/gnat.dg/disp2.adb
      - copied, changed from r257774, branches/gcc-6-branch/gcc/testsuite/gnat.dg/dispatch2.adb
    branches/gcc-6-branch/gcc/testsuite/gnat.dg/disp2_pkg.adb
      - copied, changed from r257774, branches/gcc-6-branch/gcc/testsuite/gnat.dg/dispatch2_p.adb
    branches/gcc-6-branch/gcc/testsuite/gnat.dg/disp2_pkg.ads
      - copied, changed from r257774, branches/gcc-6-branch/gcc/testsuite/gnat.dg/dispatch2_p.ads
    branches/gcc-6-branch/gcc/testsuite/gnat.dg/generic_disp.adb
      - copied, changed from r257774, branches/gcc-6-branch/gcc/testsuite/gnat.dg/generic_dispatch.adb
    branches/gcc-6-branch/gcc/testsuite/gnat.dg/generic_disp_pkg.adb
      - copied, changed from r257774, branches/gcc-6-branch/gcc/testsuite/gnat.dg/generic_dispatch_p.adb
    branches/gcc-6-branch/gcc/testsuite/gnat.dg/generic_disp_pkg.ads
      - copied, changed from r257774, branches/gcc-6-branch/gcc/testsuite/gnat.dg/generic_dispatch_p.ads
Removed:
    branches/gcc-6-branch/gcc/testsuite/gnat.dg/dispatch1.adb
    branches/gcc-6-branch/gcc/testsuite/gnat.dg/dispatch1_p.ads
    branches/gcc-6-branch/gcc/testsuite/gnat.dg/dispatch2.adb
    branches/gcc-6-branch/gcc/testsuite/gnat.dg/dispatch2_p.adb
    branches/gcc-6-branch/gcc/testsuite/gnat.dg/dispatch2_p.ads
    branches/gcc-6-branch/gcc/testsuite/gnat.dg/generic_dispatch.adb
    branches/gcc-6-branch/gcc/testsuite/gnat.dg/generic_dispatch_p.adb
    branches/gcc-6-branch/gcc/testsuite/gnat.dg/generic_dispatch_p.ads
Modified:
    branches/gcc-6-branch/gcc/testsuite/ChangeLog
    branches/gcc-6-branch/gcc/testsuite/gnat.dg/array11.adb
    branches/gcc-6-branch/gcc/testsuite/gnat.dg/null_pointer_deref1.adb
    branches/gcc-6-branch/gcc/testsuite/gnat.dg/null_pointer_deref2.adb
    branches/gcc-6-branch/gcc/testsuite/gnat.dg/object_overflow1.adb
    branches/gcc-6-branch/gcc/testsuite/gnat.dg/object_overflow2.adb
    branches/gcc-6-branch/gcc/testsuite/gnat.dg/object_overflow3.adb
    branches/gcc-6-branch/gcc/testsuite/gnat.dg/object_overflow4.adb
    branches/gcc-6-branch/gcc/testsuite/gnat.dg/object_overflow5.adb
Comment 9 Rainer Emrich 2018-02-19 17:01:43 UTC
Update on the gnat testsuite:

                === gnat tests ===

Schedule of variations:
    unix

Running target unix
Using /usr/share/dejagnu/baseboards/unix.exp as board description file for target.
Using /usr/share/dejagnu/config/unix.exp as generic interface file for target.
Using /opt/devel/gnu/src/gcc-mingw-w64/gcc-8.0.0/gcc/testsuite/config/default.exp as tool-and-target-specific interface file.
Running /opt/devel/gnu/src/gcc-mingw-w64/gcc-8.0.0/gcc/testsuite/gnat.dg/dg.exp ...
FAIL: gnat.dg/entry_queues.adb execution test
FAIL: gnat.dg/handle_and_return.adb execution test
XPASS: gnat.dg/lto19.adb (test for excess errors)
FAIL: gnat.dg/nested_controlled_alloc.adb execution test
FAIL: gnat.dg/timer_cancel.adb execution test
Running /opt/devel/gnu/src/gcc-mingw-w64/gcc-8.0.0/gcc/testsuite/gnat.dg/gcov/gcov.exp ...
Running /opt/devel/gnu/src/gcc-mingw-w64/gcc-8.0.0/gcc/testsuite/gnat.dg/specs/specs.exp ...
Running /opt/devel/gnu/src/gcc-mingw-w64/gcc-8.0.0/gcc/testsuite/gnat.dg/sso/sso.exp ...

                === gnat Summary ===

# of expected passes            2687
# of unexpected failures        4
# of unexpected successes       1
# of expected failures          22
# of unsupported tests          6
/opt/devel/SCRATCH/tmp.e2kXrnqZV0/gcc-8.0.0/gcc-8.0.0/gcc/gnatmake version 8.0.1 20180219 (experimental) [trunk revision 257803]

Improved by 11 tests which PASS.

acats tests without -fno-reorder-blocks-and-partition still at 314 failures.
Comment 10 Jakub Jelinek 2018-02-26 15:53:30 UTC
What are the "acats tests without -fno-reorder-blocks-and-partition still at 314 failures." failures?  Runtime failures, or just failing to assemble or failing to link?  How do non-ada tests with -freorder-blocks-and-partition look on this target?  Perhaps block & partition reordering needs to be disabled, either on the target for all compilation, or for Ada only, though of course it would be nice to see why.  Is that a regression though?  I mean, has -freorder-blocks-and-partition ever worked on this target for Ada, or just nobody tested it before?
Comment 11 Eric Botcazou 2018-02-26 16:02:53 UTC
> What are the "acats tests without -fno-reorder-blocks-and-partition still at
> 314 failures." failures?  Runtime failures, or just failing to assemble or
> failing to link?  How do non-ada tests with -freorder-blocks-and-partition
> look on this target?  Perhaps block & partition reordering needs to be
> disabled, either on the target for all compilation, or for Ada only, though
> of course it would be nice to see why.  Is that a regression though?

-freorder-blocks-and-partition is just incompatible with SEH at the moment and, since it's now the default, the end result is obviously a regression.  I have the beginning of a fix but it's still not sufficient.
Comment 12 Eric Botcazou 2018-03-04 14:08:52 UTC
Recategorizing.
Comment 13 Eric Botcazou 2018-03-07 15:55:30 UTC
Author: ebotcazou
Date: Wed Mar  7 15:54:59 2018
New Revision: 258338

URL: https://gcc.gnu.org/viewcvs?rev=258338&root=gcc&view=rev
Log:
	PR target/84277
	* except.h (output_function_exception_table): Adjust prototype.
	* except.c (output_function_exception_table): Remove FNNAME parameter
	and add SECTION parameter.  Ouput one part of the table at a time.
	* final.c (final_scan_insn_1) <NOTE_INSN_SWITCH_TEXT_SECTIONS>: Output
	the first part of the exception table and emit unwind directives.
	* config/i386/i386-protos.h (i386_pe_end_cold_function): Declare.
	(i386_pe_seh_cold_init): Likewise.
	* config/i386/cygming.h (ASM_DECLARE_COLD_FUNCTION_NAME): New macro.
	(ASM_DECLARE_COLD_FUNCTION_SIZE): Likewise.
	* config/i386/i386.c (x86_expand_epilogue): Fix wording in comment.
	(ix86_output_call_insn): Emit a nop in one more case for SEH.
	* config/i386/winnt.c: Include except.h.
	(struct seh_frame_state): Add reg_offset, after_prologue and
	in_cold_section fields.
	(i386_pe_seh_end_prologue): Set seh->after_prologue.
	(i386_pe_seh_cold_init): New function.
	(i386_pe_seh_fini): Add COLD parameter and bail out if it is not equal
	to seh->in_cold_section.
	(seh_emit_push): Record the offset of the push.
	(seh_emit_save): Record the offet of the save.
	(i386_pe_seh_unwind_emit): Deal with NOTE_INSN_SWITCH_TEXT_SECTIONS.
	Test seh->after_prologue to disregard the epilogue.
	(i386_pe_end_function): Pass FALSE to i386_pe_seh_fini.
	(i386_pe_end_cold_function): New function.

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/config/i386/cygming.h
    trunk/gcc/config/i386/i386-protos.h
    trunk/gcc/config/i386/i386.c
    trunk/gcc/config/i386/winnt.c
    trunk/gcc/except.c
    trunk/gcc/except.h
    trunk/gcc/final.c
Comment 14 Eric Botcazou 2018-03-07 15:57:29 UTC
Results for 8.x should be on par with those for 7.3.x now.
Comment 15 Rainer Emrich 2018-03-08 13:54:28 UTC
Hi Eric,

thanks for all your work.

Unfortunately your changes introduced an ICE while building binutils 2.19.1:

make[4]: Entering directory '/opt/devel/SCRATCH/tmp.5VoInHZZvv/gcc-8.0.0/binutils-2.29.1/opcodes'
/bin/sh ./libtool --tag=CC   --mode=compile gcc -DHAVE_CONFIG_H -I. -I/opt/devel/gnu/src/gcc-mingw-w64/binutils-2.29.1/opcodes  -I. -I/opt/devel/gnu/src/gcc-mingw-w64/binutils-2.29.1/opcodes -I../bfd -I/opt/devel/gnu/src/gcc-mingw-w64/binutils-2.29.1/opcodes/../include -I/opt/devel/gnu/src/gcc-mingw-w64/binutils-2.29.1/opcodes/../bfd  -I./../intl  -W -Wall -Wstrict-prototypes -Wmissing-prototypes -Wshadow -Wstack-usage=262144 -g -O2 -D__USE_MINGW_ACCESS -MT i386-dis.lo -MD -MP -MF .deps/i386-dis.Tpo -c -o i386-dis.lo /opt/devel/gnu/src/gcc-mingw-w64/binutils-2.29.1/opcodes/i386-dis.c
libtool: compile:  gcc -DHAVE_CONFIG_H -I. -I/opt/devel/gnu/src/gcc-mingw-w64/binutils-2.29.1/opcodes -I. -I/opt/devel/gnu/src/gcc-mingw-w64/binutils-2.29.1/opcodes -I../bfd -I/opt/devel/gnu/src/gcc-mingw-w64/binutils-2.29.1/opcodes/../include -I/opt/devel/gnu/src/gcc-mingw-w64/binutils-2.29.1/opcodes/../bfd -I./../intl -W -Wall -Wstrict-prototypes -Wmissing-prototypes -Wshadow -Wstack-usage=262144 -g -O2 -D__USE_MINGW_ACCESS -MT i386-dis.lo -MD -MP -MF .deps/i386-dis.Tpo -c /opt/devel/gnu/src/gcc-mingw-w64/binutils-2.29.1/opcodes/i386-dis.c -o i386-dis.o
during RTL pass: final
D:/opt/devel/gnu/src/gcc-mingw-w64/binutils-2.29.1/opcodes/i386-dis.c: In function 'print_insn':
D:/opt/devel/gnu/src/gcc-mingw-w64/binutils-2.29.1/opcodes/i386-dis.c:13471:1: internal compiler error: in i386_pe_seh_cold_init, at config/i386/winnt.c:913
 }
 ^
libbacktrace could not find executable to open
Please submit a full bug report,
with preprocessed source if appropriate.
See <https://gcc.gnu.org/bugs/> for instructions.
make[4]: *** [Makefile:1005: i386-dis.lo] Error 1
make[4]: Leaving directory '/opt/devel/SCRATCH/tmp.5VoInHZZvv/gcc-8.0.0/binutils-2.29.1/opcodes'

I did not run the testsuite so far. I always bootstrap gcc, build all prerequisites with the just bootstrapped gcc and boostrap again using the bootstrapped gcc as bootstrap compiler. This process has uncovered several issues in the past, including this one.
Comment 16 Eric Botcazou 2018-03-08 14:08:17 UTC
> Please submit a full bug report,
> with preprocessed source if appropriate.
> See <https://gcc.gnu.org/bugs/> for instructions.
> make[4]: *** [Makefile:1005: i386-dis.lo] Error 1
> make[4]: Leaving directory
> '/opt/devel/SCRATCH/tmp.5VoInHZZvv/gcc-8.0.0/binutils-2.29.1/opcodes'

Then do as indicated and open a new bug report.
Comment 17 Rainer Emrich 2018-03-08 17:05:43 UTC
Otherwise this looks good:

		=== acats Summary ===
# of expected passes		2315
# of unexpected failures	5
*** FAILURES: c23003b c23003g c23003i c250002 c380004

That's on par with 7.3.0.
Comment 18 Eric Botcazou 2018-03-08 17:35:55 UTC
> Otherwise this looks good:
> 
> 		=== acats Summary ===
> # of expected passes		2315
> # of unexpected failures	5
> *** FAILURES: c23003b c23003g c23003i c250002 c380004
> 
> That's on par with 7.3.0.

Wunderbar! :-) Danke schön.